[package]
name = "savedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-make = "0.36.13"
chrono = "0.4.27"
clap = { version = "4.4.1", features = ["derive"] }
csv = "1.2.2"
dotenvy = "0.15.7"
futures = "0.3.28"
prettytable-rs = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio", "bigdecimal"] }
tokio = { version = "1.32.0", features = ["full"] }
